tests/bad/02-empty.stderr
error: #[derive(Default)] is not supported for empty enums
 --> tests/bad/02-empty.rs:2:6
  |
2 | enum Empty{}
  |      ^^^^^
